--- a/1_paginasHTML/Estilo.css
+++ b/1_paginasHTML/Estilo.css
@@ -161,7 +161,7 @@ main {
     font-size: x-large;
     background-color: #fefae0;
     /* border-radius: 10px; */
-    padding: 5px 0;
+    /* padding: 5px 0; */
 }
 
 .descripcion-mascota {
