--- a/Vistas/Login/Estilos_login/registro.css
+++ b/Vistas/Login/Estilos_login/registro.css
@@ -6,7 +6,7 @@ body {
   .card-img-left {
     width: 45%;
     /* Link to your background image using in the property below! */
-    background: scroll center url('https://source.unsplash.com/WEQbe2jBg40/414x512');
+    background: scroll center url("../../Paginas/img/Mino.jpg");
     background-size: cover;
   }
   
